--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
+/* header */
+ul {
+list-style: none;
+}
 .logo{
-    color: blue;
+    color: #2196F3;
+font-weight: 700;
+font-size: 26px;
+line-height: 31px;
+
+}
+.Studio{
+    color: #000000
+    ;
+}
+.site-nav .link:hover,
+.site-nav .link:focus {
+color: #2196F3;
+}
+.section{
+    color: #212121;
 }
