--- a/css/styles.css
+++ b/css/styles.css
@@ -87,6 +87,7 @@ ul {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
+  letter-spacing: 0.06em;
   background-color: var(--accent-color);
   color: #ffffff;
 }
@@ -159,6 +160,7 @@ ul {
 }
 
 .footer-contacts {
+  font-style: normal;
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
@@ -166,14 +168,16 @@ ul {
 }
 
 .footer-mail {
+  font-style: normal;
   font-size: 14px;
-  line-height: 24px;
+  line-height: calc(24/14);
   letter-spacing: 0.03em;
   text-decoration: none;
   color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-tel {
+  font-style: normal;
   font-size: 14px;
   line-height: calc(24 / 14);
   letter-spacing: 0.03em;
@@ -192,6 +196,7 @@ ul {
   color: #ffffff;
 }
 .filter-button {
+  font-family:"Roboto";
   font-weight: 500;
   font-size: 16px;
   line-height: calc(26 / 16);
